# ChaosCache

./: .gitignore  LICENSE  README.md  TODO.md  cleartemp.sh  import_chats.py  pyproject.toml  runtemp.sh  universal_import.py
.pi/extensions/: test-vibe-memory.mjs  vibe-memory.ts
docs/: database.md  graph-report.md
docs/superpowers/plans/: 2026-06-22-vibe-memory.md
docs/superpowers/specs/: 2026-06-22-vibe-memory-design.md
tests/: test_graph.py  test_ingestor.py  test_models.py  test_pipeline.py  test_retrieval.py  test_summarizer.py
tools/: query_memory.py
vibe_memory/: __init__.py  ingestor.py  models.py  pipeline.py
vibe_memory/graph/: __init__.py  builder.py  schema.py
vibe_memory/retrieval/: __init__.py  engine.py  scorer.py
vibe_memory/summarizer/: __init__.py  base.py  llama_cpp.py  llama_server.py
